--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - run: 
-        npm install --production
+        npm install
         npm install --save-dev serverless-iam-roles-per-function
         mkdir nodejs
         mv node_modules nodejs
