v3 for node 18 fix test and zip install

--- a/.github/workflows/env-deploy.yml
+++ b/.github/workflows/env-deploy.yml
@@ -33,7 +33,8 @@ jobs:
           npm install --save-dev serverless-iam-roles-per-function
           mkdir nodejs
           mv node_modules nodejs
-          apt update -y && apt install zip -y
+          sudo apt update
+          sudo apt-get install zip
           zip -r nodejs.zip nodejs/
 
       - uses: actions/upload-artifact@v3
