--- a/.github/workflows/env-deploy.yml
+++ b/.github/workflows/env-deploy.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Build Mjs Layer
     container:
-      image: 'node:18-alpine'
+      image: node:18
     steps:
       - uses: actions/checkout@v3
 
@@ -33,7 +33,6 @@ jobs:
           npm install --save-dev serverless-iam-roles-per-function
           mkdir nodejs
           mv node_modules nodejs
-          apt-get install zip -y
           zip -r nodejs.zip nodejs/
 
       - uses: actions/upload-artifact@v3
