--- a/.github/workflows/env-deploy.yml
+++ b/.github/workflows/env-deploy.yml
@@ -30,9 +30,9 @@ jobs:
 
       - run: |
           npm install --production
-          npm install --save-dev serverless-iam-roles-per-function
           mkdir nodejs
           mv node_modules nodejs
+          apt update -y && apt install zip -y
           zip -r nodejs.zip nodejs/
 
       - uses: actions/upload-artifact@v3
