--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,4 +1,4 @@
-name: Deploy DEV
+name: Deploy ENV
 
 on:
   pull_request:
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Build/Test
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: NPM - Install dependencies
         if: steps.cached-npm-dependencies.outputs.cache-hit != 'true'
@@ -23,20 +23,20 @@ jobs:
     timeout-minutes: 15
     runs-on: ubuntu-latest
     name: Build Mjs Layer
-    Container:
-      image: 'node:18-alpine'
+    container:
+      image: node:18
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - run: |
           npm install --production
-          npm install --save-dev serverless-iam-roles-per-function
           mkdir nodejs
           mv node_modules nodejs
           apt update -y && apt install zip -y
           zip -r nodejs.zip nodejs/
+          npm install --save-dev serverless-iam-roles-per-function
 
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           name: nodejsdpn
           path: nodejs.zip
@@ -46,11 +46,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: testing-changes
     steps:
-      - uses: actions/checkout@v2.0.0
+      - uses: actions/checkout@v3
 
       - name: NPM - Load cached venv
         id: cached-npm-dependencies
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: node_modules
           key: npm-${{ runner.os }}-${{ hashFiles('**/package.json') }}
@@ -59,10 +59,10 @@ jobs:
         if: steps.cached-npm-dependencies.outputs.cache-hit != 'true'
         run: 'npm install'
 
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v3
         with:
           name: nodejsdpn
-          path: app/
+          path: ./app/
 
       - name: Deploy using sls
         run: 'npx sls deploy'
@@ -71,7 +71,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
 
       - name: Comment PR
-        uses: thollander/actions-comment-pull-request@v1
+        uses: thollander/actions-comment-pull-request@v2
         with:
           message: |
             Your SLS App was deployed!
