--- a/.github/workflows/env-deploy.yml
+++ b/.github/workflows/env-deploy.yml
@@ -44,7 +44,7 @@ jobs:
   deploy-env:
     name: Deploy Lambda
     runs-on: ubuntu-latest
-    needs: testing-changes
+    needs: [testing-changes, build-mjs-layers]
     steps:
       - uses: actions/checkout@v3
 
