--- a/.github/workflows/env-deploy.yml
+++ b/.github/workflows/env-deploy.yml
@@ -67,11 +67,12 @@ jobs:
       - name: Deploy using sls
         run: 'npx sls deploy'
         env:
+          AWS_DEFAULT_REGION: us-east-1
           AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
           AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
 
       - name: Comment PR
-        uses: thollander/actions-comment-pull-request@v2
+        uses: thollander/actions-comment-pull-request@v1
         with:
           message: |
             Your SLS App was deployed!
