--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,4 +1,4 @@
-name: Deploy ENV
+name: Deploy APP PROD
 
 on:
   pull_request:
@@ -44,7 +44,7 @@ jobs:
   deploy-env:
     name: Deploy Lambda
     runs-on: ubuntu-latest
-    needs: testing-changes
+    needs: [testing-changes, build-mjs-layers]
     steps:
       - uses: actions/checkout@v3
 
@@ -62,13 +62,14 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: nodejsdpn
-          path: ./app/
+          path: app/
 
       - name: Deploy using sls
         run: 'npx sls deploy'
         env:
-          AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
-          AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+          AWS_DEFAULT_REGION: us-east-1
+          AWS_ACCESS_KEY_ID: ${{variables.AWS_ACCESS_KEY_ID}}
+          AWS_SECRET_ACCESS_KEY: ${{variables.AWS_SECRET_ACCESS_KEY}}
 
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@v2
