--- a/.github/workflows/env-deploy.yml
+++ b/.github/workflows/env-deploy.yml
@@ -78,4 +78,4 @@ jobs:
             Your SLS App was deployed!
             Awesome :D
 
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.SECRET_PAT_GIT }}
