--- a/.github/workflows/env-deploy.yml
+++ b/.github/workflows/env-deploy.yml
@@ -77,5 +77,5 @@ jobs:
           message: |
             Your SLS App was deployed!
             Awesome :D
-
-          GITHUB_TOKEN: ${{ secrets.SECRET_PAT_GIT }}
+        env:
+          ACTIONS_PAT: ${{ secrets.SECRET_PAT_GIT }}
