--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "license": "ISC",
   "devDependencies": {
     "serverless": "^3.21.0",
-    "serverless-iam-roles-per-function": "^3.2.0",
     "serverless-offline": "^13.1.2"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.425.0",
     "serverless-dynamodb-local": "^0.2.40",
-    "sharp": "^0.32.6"
+    "sharp": "^0.32.6",
+    "serverless-iam-roles-per-function": "^3.2.0"
   }
 }
