--- a/serverless.yml
+++ b/serverless.yml
@@ -44,7 +44,7 @@ constructs:
           - 'likeUser/likeUser-App.mjs'
     extensions:
       queue:
-        properties:
+        Properties:
           QueueName: likequeue
 
 package:
